syntax = "proto3";  // 定義要使用的 protocol buffer 版本

option go_package = "auth/service";
package service;

message ValidateTokenRequest {
  string token = 1; 
}

message ValidateTokenResponse {
  string host = 1;
  string id = 2;
  string account = 3;
  string name = 4;
  repeated string perms = 5;
}

message IsAccountsExistRequest {
  repeated string accounts = 1;
}

message IsAccountsExistResponse {
  repeated string NotExistAccounts = 1;
}

service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {};
  rpc IsAccountsExist(IsAccountsExistRequest) returns (IsAccountsExistResponse) {};
}

